[package]
name = "claude_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
futures = "0.3.30"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
