[package]
name = "claude-cli"
version = "0.1.1"
authors = ["Guy Hannay <guyhannay@hotmail.co.uk>"]
description = "Rust CLI to interact with Anthropic's Language model (Claude) in the terminal"
documentation = "https://docs.rs/claude-cli"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghannay10/claude-cli"
keywords = ["cli", "anthropic", "llm", "chatgpt"]
rust-version = "1.74.0"
readme = "README.md"

[[bin]]
name = "claude"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
futures = "0.3.30"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
